--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hyperstonenet/utils.anvil",
+  "name": "@strdstnet/utils.anvil",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
