--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -1,24 +1,37 @@
 name: Build and Publish to GH Packages
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - main
+
 
 jobs:
   build-and-publish:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v1
+        with:
+          submodules: true
+      - uses: actions/setup-node@v2
         with:
           node-version: 14
           registry-url: https://npm.pkg.github.com/
           scope: '@strdstnet'
-      - run: yarn --ignore-scripts
+      - run: npm install -g npm@latest
+      - run: npm i
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
-      - run: yarn build
-      - run: yarn publish --new-version ${{ github.event.release.tag_name }} --no-git-tag-version
+      - run: npm run build
+      - run: npm version patch ----no-git-tag-version
+      - name: Set PKG_VER
+        run: |
+            echo 'PKG_VER<<EOF' >> $GITHUB_ENV
+            node -e "console.log(require('./package.json').version);" >> $GITHUB_ENV
+            echo 'EOF' >> $GITHUB_ENV
+      - uses: EndBug/add-and-commit@v7
+        with:
+          message: ${{ env.PKG_VER }}
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
