--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@strdstnet/utils.anvil",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "version": "1.0.9",
   "scripts": {
     "build": "rm -rf lib && tsc"
   },
