--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@strdstnet/utils.anvil",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main_": "lib/index.js",
+  "types_": "lib/index.d.ts",
+  "main": "src/index.ts",
   "version": "1.0.10",
   "scripts": {
     "build": "rm -rf lib && tsc"
@@ -10,7 +11,7 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "devDependencies": {
-    "@strdst/tsconfig": "^1.0.0",
+    "@strdst/tsconfig": "^1.0.3",
     "@types/fs-extra": "^9.0.2",
     "@types/node": "^14.11.2",
     "@types/uuid": "^8.3.0",
